--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,8 +91,8 @@ jobs:
       run: |
         # Extract appimagetool
         ./appimagetool-x86_64.AppImage --appimage-extract
-        # Use extracted version (doesn't need FUSE)
-        ./squashfs-root/AppRun RommSync.AppDir RommSync-x86_64.AppImage
+        # Use extracted version with architecture specified
+        ARCH=x86_64 ./squashfs-root/AppRun RommSync.AppDir RommSync-x86_64.AppImage
         chmod +x RommSync-x86_64.AppImage
         
     - name: Create Release
