Fix static files bundling for PyInstaller

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,16 +27,68 @@ jobs:
         
     - name: Build with PyInstaller
       run: |
-        pyinstaller --clean \
-          --onefile \
-          --name RommSync \
-          --add-data "app/static:app/static" \
-          --hidden-import uvicorn.logging \
-          --hidden-import uvicorn.loops.auto \
-          --hidden-import uvicorn.protocols.http.auto \
-          --hidden-import uvicorn.protocols.websockets.auto \
-          --hidden-import uvicorn.lifespan.on \
-          app/main.py
+        # Create spec file with correct paths
+        cat > rommsync.spec << 'SPEC'
+        # -*- mode: python ; coding: utf-8 -*-
+        import os
+        from PyInstaller.utils.hooks import collect_data_files
+
+        block_cipher = None
+
+        # Get absolute paths
+        app_dir = os.path.join(os.getcwd(), 'app')
+        static_dir = os.path.join(app_dir, 'static')
+
+        a = Analysis(
+            ['app/main.py'],
+            pathex=[],
+            binaries=[],
+            datas=[
+                (static_dir, 'static'),
+            ],
+            hiddenimports=[
+                'uvicorn.logging',
+                'uvicorn.loops.auto',
+                'uvicorn.protocols.http.auto',
+                'uvicorn.protocols.websockets.auto',
+                'uvicorn.lifespan.on',
+            ],
+            hookspath=[],
+            hooksconfig={},
+            runtime_hooks=[],
+            excludes=[],
+            win_no_prefer_redirects=False,
+            win_private_assemblies=False,
+            cipher=block_cipher,
+            noarchive=False,
+        )
+
+        pyz = PYZ(a.pure, a.zipped_data, cipher=block_cipher)
+
+        exe = EXE(
+            pyz,
+            a.scripts,
+            a.binaries,
+            a.zipfiles,
+            a.datas,
+            [],
+            name='RommSync',
+            debug=False,
+            bootloader_ignore_signals=False,
+            strip=False,
+            upx=True,
+            upx_exclude=[],
+            runtime_tmpdir=None,
+            console=True,
+            disable_windowed_traceback=False,
+            argv_emulation=False,
+            target_arch=None,
+            codesign_identity=None,
+            entitlements_file=None,
+        )
+        SPEC
+        
+        pyinstaller --clean rommsync.spec
           
     - name: Install AppImage tools
       run: |
